--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,14 @@
 {
-  "semi": true,
-  "singleQuote": true,
-  "trailingComma": "all",
   "printWidth": 80,
+  "singleQuote": true,
+  "trailingComma": "es5",
   "tabWidth": 2,
-  "endOfLine": "auto"
+  "bracketSpacing": true,
+  "jsxBracketSameLine": false,
+  "jsxSingleQuote": true,
+  "semi": true,
+  "useTabs": false,
+  "arrowParens": "always",
+  "endOfLine": "auto",
+  "htmlWhitespaceSensitivity": "css"
 }
