--- a/.prettierrc
+++ b/.prettierrc
@@ -1,14 +1,8 @@
 {
-  "printWidth": 80,
-  "singleQuote": true,
-  "trailingComma": "es5",
-  "tabWidth": 2,
-  "bracketSpacing": true,
-  "jsxBracketSameLine": false,
-  "jsxSingleQuote": true,
   "semi": true,
-  "useTabs": false,
-  "arrowParens": "always",
-  "endOfLine": "auto",
-  "htmlWhitespaceSensitivity": "css"
+  "singleQuote": true,
+  "trailingComma": "all",
+  "printWidth": 80,
+  "tabWidth": 2,
+  "endOfLine": "auto"
 }
